// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PolicyTemplateDetailsView component renders as expected -- empty list 1`] = `
<div
  className="policy-status-history-view"
>
  <div
    className="table"
  >
    <h3
      className="pf-c-title pf-m-lg title"
    >
      ironman
    </h3>
    <h4
      className="pf-c-title pf-m-md title"
    >
      Template: policy-imagemanifestvulnpolicy
    </h4>
    <br />
    <div
      className="pattern-fly-table-group"
    >
      <div
        className="pf-c-search-input"
      >
        <span
          className="pf-c-search-input__text"
        >
          <span
            className="pf-c-search-input__icon"
          >
            <svg
              aria-hidden={true}
              aria-labelledby={null}
              fill="currentColor"
              height="1em"
              role="img"
              style={
                Object {
                  "verticalAlign": "-0.125em",
                }
              }
              viewBox="0 0 512 512"
              width="1em"
            >
              <path
                d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
              />
            </svg>
          </span>
          <input
            aria-label="Search input"
            className="pf-c-search-input__text-input"
            onChange={[Function]}
            placeholder="Find"
            value=""
          />
        </span>
        
      </div>
      <div
        className="pattern-fly-table"
      >
        <table
          aria-label="Sortable Table"
          className="pf-c-table pf-m-grid-md"
          data-ouia-component-id="OUIA-Generated-Table-3"
          data-ouia-component-type="PF4/Table"
          data-ouia-safe={true}
          role="grid"
        >
          <thead
            className="pattern-fly-table-header"
          >
            <tr>
              <th
                className="pf-m-wrap"
                data-key={0}
                data-label="Status"
                onMouseEnter={[Function]}
                scope="col"
              >
                Status
              </th>
              <th
                className="pf-m-width-70 pf-m-wrap"
                data-key={1}
                data-label="Message"
                onMouseEnter={[Function]}
                scope="col"
              >
                Message
              </th>
              <th
                className="pf-m-wrap"
                data-key={2}
                data-label="Last Report"
                onMouseEnter={[Function]}
                scope="col"
              >
                Last Report
              </th>
            </tr>
          </thead>
          <tbody
            className="pattern-fly-table-body"
          />
        </table>
        <div
          className="pf-c-empty-state pf-m-sm pattern-fly-table-empty-state"
        >
          <div
            className="pf-c-empty-state__content"
          >
            <svg
              aria-hidden="true"
              aria-labelledby={null}
              className="pf-c-empty-state__icon"
              fill="currentColor"
              height="1em"
              role="img"
              style={
                Object {
                  "verticalAlign": "-0.125em",
                }
              }
              viewBox="0 0 512 512"
              width="1em"
            >
              <path
                d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
              />
            </svg>
            <h2
              className="pf-c-title pf-m-md"
            >
              No results found
            </h2>
          </div>
        </div>
        <div
          className="pf-c-pagination pf-m-bottom"
          data-ouia-component-id="OUIA-Generated-Pagination-bottom-3"
          data-ouia-component-type="PF4/Pagination"
          data-ouia-safe={true}
          id="pagination-options-menu-bottom-2"
        >
          <div
            className="pf-c-options-menu pf-m-top"
            data-ouia-component-type="PF4/PaginationOptionsMenu"
            data-ouia-safe={true}
          >
            <div
              className="pf-c-options-menu__toggle pf-m-plain pf-m-text"
            >
              <span
                className="pf-c-options-menu__toggle-text"
              >
                <b>
                  0
                   - 
                  0
                </b>
                 
                of 
                <b>
                  0
                </b>
                 
                
              </span>
              <button
                aria-expanded={false}
                aria-label="Items per page"
                className="  pf-c-options-menu__toggle-button"
                disabled={true}
                id="pagination-options-menu-bottom-toggle-2"
                onClick={[Function]}
                onKeyDown={[Function]}
                type="button"
              >
                <span
                  className="pf-c-options-menu__toggle-button-icon"
                >
                  <svg
                    aria-hidden={true}
                    aria-labelledby={null}
                    fill="currentColor"
                    height="1em"
                    role="img"
                    style={
                      Object {
                        "verticalAlign": "-0.125em",
                      }
                    }
                    viewBox="0 0 320 512"
                    width="1em"
                  >
                    <path
                      d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                    />
                  </svg>
                </span>
              </button>
            </div>
          </div>
          <nav
            aria-label="Pagination"
            className="pf-c-pagination__nav"
          >
            <div
              className="pf-c-pagination__nav-control pf-m-first"
            >
              <button
                aria-disabled={true}
                aria-label="Go to first page"
                className="pf-c-button pf-m-plain pf-m-disabled"
                data-action="first"
                data-ouia-component-id="OUIA-Generated-Button-plain-9"
                data-ouia-component-type="PF4/Button"
                data-ouia-safe={true}
                disabled={true}
                onClick={[Function]}
                tabIndex={null}
                type="button"
              >
                <svg
                  aria-hidden={true}
                  aria-labelledby={null}
                  fill="currentColor"
                  height="1em"
                  role="img"
                  style={
                    Object {
                      "verticalAlign": "-0.125em",
                    }
                  }
                  viewBox="0 0 448 512"
                  width="1em"
                >
                  <path
                    d="M223.7 239l136-136c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9L319.9 256l96.4 96.4c9.4 9.4 9.4 24.6 0 33.9L393.7 409c-9.4 9.4-24.6 9.4-33.9 0l-136-136c-9.5-9.4-9.5-24.6-.1-34zm-192 34l136 136c9.4 9.4 24.6 9.4 33.9 0l22.6-22.6c9.4-9.4 9.4-24.6 0-33.9L127.9 256l96.4-96.4c9.4-9.4 9.4-24.6 0-33.9L201.7 103c-9.4-9.4-24.6-9.4-33.9 0l-136 136c-9.5 9.4-9.5 24.6-.1 34z"
                  />
                </svg>
              </button>
            </div>
            <div
              className="pf-c-pagination__nav-control"
            >
              <button
                aria-disabled={true}
                aria-label="Go to previous page"
                className="pf-c-button pf-m-plain pf-m-disabled"
                data-action="previous"
                data-ouia-component-id="OUIA-Generated-Button-plain-10"
                data-ouia-component-type="PF4/Button"
                data-ouia-safe={true}
                disabled={true}
                onClick={[Function]}
                tabIndex={null}
                type="button"
              >
                <svg
                  aria-hidden={true}
                  aria-labelledby={null}
                  fill="currentColor"
                  height="1em"
                  role="img"
                  style={
                    Object {
                      "verticalAlign": "-0.125em",
                    }
                  }
                  viewBox="0 0 256 512"
                  width="1em"
                >
                  <path
                    d="M31.7 239l136-136c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9L127.9 256l96.4 96.4c9.4 9.4 9.4 24.6 0 33.9L201.7 409c-9.4 9.4-24.6 9.4-33.9 0l-136-136c-9.5-9.4-9.5-24.6-.1-34z"
                  />
                </svg>
              </button>
            </div>
            <div
              className="pf-c-pagination__nav-page-select"
            >
              <input
                aria-label="Current page"
                className="pf-c-form-control"
                disabled={true}
                max={0}
                min={1}
                onChange={[Function]}
                onKeyDown={[Function]}
                type="number"
                value={0}
              />
              <span
                aria-hidden="true"
              >
                of 
                0
              </span>
            </div>
            <div
              className="pf-c-pagination__nav-control"
            >
              <button
                aria-disabled={true}
                aria-label="Go to next page"
                className="pf-c-button pf-m-plain pf-m-disabled"
                data-action="next"
                data-ouia-component-id="OUIA-Generated-Button-plain-11"
                data-ouia-component-type="PF4/Button"
                data-ouia-safe={true}
                disabled={true}
                onClick={[Function]}
                tabIndex={null}
                type="button"
              >
                <svg
                  aria-hidden={true}
                  aria-labelledby={null}
                  fill="currentColor"
                  height="1em"
                  role="img"
                  style={
                    Object {
                      "verticalAlign": "-0.125em",
                    }
                  }
                  viewBox="0 0 256 512"
                  width="1em"
                >
                  <path
                    d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
                  />
                </svg>
              </button>
            </div>
            <div
              className="pf-c-pagination__nav-control pf-m-last"
            >
              <button
                aria-disabled={true}
                aria-label="Go to last page"
                className="pf-c-button pf-m-plain pf-m-disabled"
                data-action="last"
                data-ouia-component-id="OUIA-Generated-Button-plain-12"
                data-ouia-component-type="PF4/Button"
                data-ouia-safe={true}
                disabled={true}
                onClick={[Function]}
                tabIndex={null}
                type="button"
              >
                <svg
                  aria-hidden={true}
                  aria-labelledby={null}
                  fill="currentColor"
                  height="1em"
                  role="img"
                  style={
                    Object {
                      "verticalAlign": "-0.125em",
                    }
                  }
                  viewBox="0 0 448 512"
                  width="1em"
                >
                  <path
                    d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34zm192-34l-136-136c-9.4-9.4-24.6-9.4-33.9 0l-22.6 22.6c-9.4 9.4-9.4 24.6 0 33.9l96.4 96.4-96.4 96.4c-9.4 9.4-9.4 24.6 0 33.9l22.6 22.6c9.4 9.4 24.6 9.4 33.9 0l136-136c9.4-9.2 9.4-24.4 0-33.8z"
                  />
                </svg>
              </button>
            </div>
          </nav>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PolicyTemplateDetailsView component renders as expected 1`] = `
<div
  className="policy-status-history-view"
>
  <div
    className="table"
  >
    <h3
      className="pf-c-title pf-m-lg title"
    >
      ironman
    </h3>
    <h4
      className="pf-c-title pf-m-md title"
    >
      Template: policy-imagemanifestvulnpolicy
    </h4>
    <br />
    <div
      className="pattern-fly-table-group"
    >
      <div
        className="pf-c-search-input"
      >
        <span
          className="pf-c-search-input__text"
        >
          <span
            className="pf-c-search-input__icon"
          >
            <svg
              aria-hidden={true}
              aria-labelledby={null}
              fill="currentColor"
              height="1em"
              role="img"
              style={
                Object {
                  "verticalAlign": "-0.125em",
                }
              }
              viewBox="0 0 512 512"
              width="1em"
            >
              <path
                d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
              />
            </svg>
          </span>
          <input
            aria-label="Search input"
            className="pf-c-search-input__text-input"
            onChange={[Function]}
            placeholder="Find"
            value=""
          />
        </span>
        
      </div>
      <div
        className="pattern-fly-table"
      >
        <table
          aria-label="Sortable Table"
          className="pf-c-table pf-m-grid-md"
          data-ouia-component-id="OUIA-Generated-Table-1"
          data-ouia-component-type="PF4/Table"
          data-ouia-safe={true}
          role="grid"
        >
          <thead
            className="pattern-fly-table-header"
          >
            <tr>
              <th
                className="pf-m-wrap"
                data-key={0}
                data-label="Status"
                onMouseEnter={[Function]}
                scope="col"
              >
                Status
              </th>
              <th
                className="pf-m-width-70 pf-m-wrap"
                data-key={1}
                data-label="Message"
                onMouseEnter={[Function]}
                scope="col"
              >
                Message
              </th>
              <th
                className="pf-m-wrap"
                data-key={2}
                data-label="Last Report"
                onMouseEnter={[Function]}
                scope="col"
              >
                Last Report
              </th>
            </tr>
          </thead>
          <tbody
            className="pattern-fly-table-body"
          >
            <tr
              className=""
              data-ouia-component-id="OUIA-Generated-TableRow-1"
              data-ouia-component-type="PF4/TableRow"
              data-ouia-safe={true}
              hidden={false}
              onMouseDown={[Function]}
            >
              <td
                className="pf-m-break-word"
                data-key={0}
                data-label="Status"
                onMouseEnter={[Function]}
              >
                <div>
                  <svg
                    aria-hidden={true}
                    aria-labelledby={null}
                    fill="#c9190b"
                    height="1em"
                    role="img"
                    style={
                      Object {
                        "verticalAlign": "-0.125em",
                      }
                    }
                    viewBox="0 0 512 512"
                    width="1em"
                  >
                    <path
                      d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
                    />
                  </svg>
                   
                  Not compliant
                </div>
              </td>
              <td
                className="pf-m-break-word"
                data-key={1}
                data-label="Message"
                onMouseEnter={[Function]}
              >
                NonCompliant; violation - imagemanifestvulns exist: [sha256.483a3d0c52132c7b541af90a73df657388621f57ca3db3c40d28dc8174f5420f, sha256.6d2162915f9513d3f2222ffce9beff3d694093976a368875ead963c6436c0074, sha256.f35ca58473522e3621fb407d0e27df6b5ad12f829126e22cbf15e57447ef9f2f] in namespace open-cluster-management-agent; [sha256.6bdda142dd59a0dba873253572053c54844652258b63881eeb669f31488dcaca, sha256.73393a8c99c6674dce8371e55c6973d9d8ced8b8013310d1700b2cee14912fc9, sha256.82491e047a124a86e9185d84f056027a311b2ec9af7ee694aaed2fae380b81fd, sha256.8a1070897671f62c095a6f8c065da120b1d7a119b54989b82ae9fb9f35733d8f, sha256.8e994ac2ee4bbd2fc21a67c5e4884f1040d726e0193fc3e8acd3c4b9da4d921c, sha256.9316d67e3f15c3f55f4416140a679c69fb80a771f766b68d3c336c608fc643c4, sha256.c91d425d733e4331ae610b7d2d7e1e0420b5f5f6157c3a349423c520b4f97d53, sha256.dc8ead281dd2d6ca43fa616f019c464f2835aec1fa7432ae47a9a4603f3ea7a5] in namespace open-cluster-management-agent-addon; [sha256.7613d8f7db639147b91b16b54b24cfa351c3cbde6aa7b7bf1b9c80c260efad06] in namespace openshift-cluster-version
              </td>
              <td
                className=""
                data-key={2}
                data-label="Last Report"
                onMouseEnter={[Function]}
              >
                2 days ago
              </td>
            </tr>
            <tr
              className=""
              data-ouia-component-id="OUIA-Generated-TableRow-2"
              data-ouia-component-type="PF4/TableRow"
              data-ouia-safe={true}
              hidden={false}
              onMouseDown={[Function]}
            >
              <td
                className="pf-m-break-word"
                data-key={0}
                data-label="Status"
                onMouseEnter={[Function]}
              >
                <div>
                  <svg
                    aria-hidden={true}
                    aria-labelledby={null}
                    fill="#c9190b"
                    height="1em"
                    role="img"
                    style={
                      Object {
                        "verticalAlign": "-0.125em",
                      }
                    }
                    viewBox="0 0 512 512"
                    width="1em"
                  >
                    <path
                      d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
                    />
                  </svg>
                   
                  Not compliant
                </div>
              </td>
              <td
                className="pf-m-break-word"
                data-key={1}
                data-label="Message"
                onMouseEnter={[Function]}
              >
                NonCompliant; violation - imagemanifestvulns exist: [sha256.483a3d0c52132c7b541af90a73df657388621f57ca3db3c40d28dc8174f5420f, sha256.6d2162915f9513d3f2222ffce9beff3d694093976a368875ead963c6436c0074, sha256.f35ca58473522e3621fb407d0e27df6b5ad12f829126e22cbf15e57447ef9f2f] in namespace open-cluster-management-agent; [sha256.6bdda142dd59a0dba873253572053c54844652258b63881eeb669f31488dcaca, sha256.73393a8c99c6674dce8371e55c6973d9d8ced8b8013310d1700b2cee14912fc9, sha256.82491e047a124a86e9185d84f056027a311b2ec9af7ee694aaed2fae380b81fd, sha256.8a1070897671f62c095a6f8c065da120b1d7a119b54989b82ae9fb9f35733d8f, sha256.8e994ac2ee4bbd2fc21a67c5e4884f1040d726e0193fc3e8acd3c4b9da4d921c, sha256.9316d67e3f15c3f55f4416140a679c69fb80a771f766b68d3c336c608fc643c4, sha256.c91d425d733e4331ae610b7d2d7e1e0420b5f5f6157c3a349423c520b4f97d53, sha256.dc8ead281dd2d6ca43fa616f019c464f2835aec1fa7432ae47a9a4603f3ea7a5] in namespace open-cluster-management-agent-addon; [sha256.7613d8f7db639147b91b16b54b24cfa351c3cbde6aa7b7bf1b9c80c260efad06] in namespace openshift-cluster-version
              </td>
              <td
                className=""
                data-key={2}
                data-label="Last Report"
                onMouseEnter={[Function]}
              >
                2 days ago
              </td>
            </tr>
            <tr
              className=""
              data-ouia-component-id="OUIA-Generated-TableRow-3"
              data-ouia-component-type="PF4/TableRow"
              data-ouia-safe={true}
              hidden={false}
              onMouseDown={[Function]}
            >
              <td
                className="pf-m-break-word"
                data-key={0}
                data-label="Status"
                onMouseEnter={[Function]}
              >
                <div>
                  <svg
                    aria-hidden={true}
                    aria-labelledby={null}
                    fill="#c9190b"
                    height="1em"
                    role="img"
                    style={
                      Object {
                        "verticalAlign": "-0.125em",
                      }
                    }
                    viewBox="0 0 512 512"
                    width="1em"
                  >
                    <path
                      d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
                    />
                  </svg>
                   
                  Not compliant
                </div>
              </td>
              <td
                className="pf-m-break-word"
                data-key={1}
                data-label="Message"
                onMouseEnter={[Function]}
              >
                NonCompliant; violation - imagemanifestvulns exist: [sha256.483a3d0c52132c7b541af90a73df657388621f57ca3db3c40d28dc8174f5420f, sha256.6d2162915f9513d3f2222ffce9beff3d694093976a368875ead963c6436c0074, sha256.f35ca58473522e3621fb407d0e27df6b5ad12f829126e22cbf15e57447ef9f2f] in namespace open-cluster-management-agent; [sha256.6bdda142dd59a0dba873253572053c54844652258b63881eeb669f31488dcaca, sha256.73393a8c99c6674dce8371e55c6973d9d8ced8b8013310d1700b2cee14912fc9, sha256.82491e047a124a86e9185d84f056027a311b2ec9af7ee694aaed2fae380b81fd, sha256.8a1070897671f62c095a6f8c065da120b1d7a119b54989b82ae9fb9f35733d8f, sha256.8e994ac2ee4bbd2fc21a67c5e4884f1040d726e0193fc3e8acd3c4b9da4d921c, sha256.9316d67e3f15c3f55f4416140a679c69fb80a771f766b68d3c336c608fc643c4, sha256.c91d425d733e4331ae610b7d2d7e1e0420b5f5f6157c3a349423c520b4f97d53, sha256.dc8ead281dd2d6ca43fa616f019c464f2835aec1fa7432ae47a9a4603f3ea7a5] in namespace open-cluster-management-agent-addon; [sha256.7613d8f7db639147b91b16b54b24cfa351c3cbde6aa7b7bf1b9c80c260efad06] in namespace openshift-cluster-version
              </td>
              <td
                className=""
                data-key={2}
                data-label="Last Report"
                onMouseEnter={[Function]}
              >
                2 days ago
              </td>
            </tr>
          </tbody>
        </table>
        <div
          className="pf-c-pagination pf-m-bottom"
          data-ouia-component-id="OUIA-Generated-Pagination-bottom-1"
          data-ouia-component-type="PF4/Pagination"
          data-ouia-safe={true}
          id="pagination-options-menu-bottom-0"
        >
          <div
            className="pf-c-options-menu pf-m-top"
            data-ouia-component-type="PF4/PaginationOptionsMenu"
            data-ouia-safe={true}
          >
            <div
              className="pf-c-options-menu__toggle pf-m-plain pf-m-text"
            >
              <span
                className="pf-c-options-menu__toggle-text"
              >
                <b>
                  1
                   - 
                  3
                </b>
                 
                of 
                <b>
                  3
                </b>
                 
                
              </span>
              <button
                aria-expanded={false}
                aria-label="Items per page"
                className="  pf-c-options-menu__toggle-button"
                disabled={false}
                id="pagination-options-menu-bottom-toggle-0"
                onClick={[Function]}
                onKeyDown={[Function]}
                type="button"
              >
                <span
                  className="pf-c-options-menu__toggle-button-icon"
                >
                  <svg
                    aria-hidden={true}
                    aria-labelledby={null}
                    fill="currentColor"
                    height="1em"
                    role="img"
                    style={
                      Object {
                        "verticalAlign": "-0.125em",
                      }
                    }
                    viewBox="0 0 320 512"
                    width="1em"
                  >
                    <path
                      d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                    />
                  </svg>
                </span>
              </button>
            </div>
          </div>
          <nav
            aria-label="Pagination"
            className="pf-c-pagination__nav"
          >
            <div
              className="pf-c-pagination__nav-control pf-m-first"
            >
              <button
                aria-disabled={true}
                aria-label="Go to first page"
                className="pf-c-button pf-m-plain pf-m-disabled"
                data-action="first"
                data-ouia-component-id="OUIA-Generated-Button-plain-1"
                data-ouia-component-type="PF4/Button"
                data-ouia-safe={true}
                disabled={true}
                onClick={[Function]}
                tabIndex={null}
                type="button"
              >
                <svg
                  aria-hidden={true}
                  aria-labelledby={null}
                  fill="currentColor"
                  height="1em"
                  role="img"
                  style={
                    Object {
                      "verticalAlign": "-0.125em",
                    }
                  }
                  viewBox="0 0 448 512"
                  width="1em"
                >
                  <path
                    d="M223.7 239l136-136c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9L319.9 256l96.4 96.4c9.4 9.4 9.4 24.6 0 33.9L393.7 409c-9.4 9.4-24.6 9.4-33.9 0l-136-136c-9.5-9.4-9.5-24.6-.1-34zm-192 34l136 136c9.4 9.4 24.6 9.4 33.9 0l22.6-22.6c9.4-9.4 9.4-24.6 0-33.9L127.9 256l96.4-96.4c9.4-9.4 9.4-24.6 0-33.9L201.7 103c-9.4-9.4-24.6-9.4-33.9 0l-136 136c-9.5 9.4-9.5 24.6-.1 34z"
                  />
                </svg>
              </button>
            </div>
            <div
              className="pf-c-pagination__nav-control"
            >
              <button
                aria-disabled={true}
                aria-label="Go to previous page"
                className="pf-c-button pf-m-plain pf-m-disabled"
                data-action="previous"
                data-ouia-component-id="OUIA-Generated-Button-plain-2"
                data-ouia-component-type="PF4/Button"
                data-ouia-safe={true}
                disabled={true}
                onClick={[Function]}
                tabIndex={null}
                type="button"
              >
                <svg
                  aria-hidden={true}
                  aria-labelledby={null}
                  fill="currentColor"
                  height="1em"
                  role="img"
                  style={
                    Object {
                      "verticalAlign": "-0.125em",
                    }
                  }
                  viewBox="0 0 256 512"
                  width="1em"
                >
                  <path
                    d="M31.7 239l136-136c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9L127.9 256l96.4 96.4c9.4 9.4 9.4 24.6 0 33.9L201.7 409c-9.4 9.4-24.6 9.4-33.9 0l-136-136c-9.5-9.4-9.5-24.6-.1-34z"
                  />
                </svg>
              </button>
            </div>
            <div
              className="pf-c-pagination__nav-page-select"
            >
              <input
                aria-label="Current page"
                className="pf-c-form-control"
                disabled={true}
                max={1}
                min={1}
                onChange={[Function]}
                onKeyDown={[Function]}
                type="number"
                value={1}
              />
              <span
                aria-hidden="true"
              >
                of 
                1
              </span>
            </div>
            <div
              className="pf-c-pagination__nav-control"
            >
              <button
                aria-disabled={true}
                aria-label="Go to next page"
                className="pf-c-button pf-m-plain pf-m-disabled"
                data-action="next"
                data-ouia-component-id="OUIA-Generated-Button-plain-3"
                data-ouia-component-type="PF4/Button"
                data-ouia-safe={true}
                disabled={true}
                onClick={[Function]}
                tabIndex={null}
                type="button"
              >
                <svg
                  aria-hidden={true}
                  aria-labelledby={null}
                  fill="currentColor"
                  height="1em"
                  role="img"
                  style={
                    Object {
                      "verticalAlign": "-0.125em",
                    }
                  }
                  viewBox="0 0 256 512"
                  width="1em"
                >
                  <path
                    d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
                  />
                </svg>
              </button>
            </div>
            <div
              className="pf-c-pagination__nav-control pf-m-last"
            >
              <button
                aria-disabled={true}
                aria-label="Go to last page"
                className="pf-c-button pf-m-plain pf-m-disabled"
                data-action="last"
                data-ouia-component-id="OUIA-Generated-Button-plain-4"
                data-ouia-component-type="PF4/Button"
                data-ouia-safe={true}
                disabled={true}
                onClick={[Function]}
                tabIndex={null}
                type="button"
              >
                <svg
                  aria-hidden={true}
                  aria-labelledby={null}
                  fill="currentColor"
                  height="1em"
                  role="img"
                  style={
                    Object {
                      "verticalAlign": "-0.125em",
                    }
                  }
                  viewBox="0 0 448 512"
                  width="1em"
                >
                  <path
                    d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34zm192-34l-136-136c-9.4-9.4-24.6-9.4-33.9 0l-22.6 22.6c-9.4 9.4-9.4 24.6 0 33.9l96.4 96.4-96.4 96.4c-9.4 9.4-9.4 24.6 0 33.9l22.6 22.6c9.4 9.4 24.6 9.4 33.9 0l136-136c9.4-9.2 9.4-24.4 0-33.8z"
                  />
                </svg>
              </button>
            </div>
          </nav>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PolicyTemplateDetailsView component renders as expected with pagination 1`] = `
<div
  className="policy-status-history-view"
>
  <div
    className="table"
  >
    <h3
      className="pf-c-title pf-m-lg title"
    >
      ironman
    </h3>
    <h4
      className="pf-c-title pf-m-md title"
    >
      Template: policy-imagemanifestvulnpolicy
    </h4>
    <br />
    <div
      className="pattern-fly-table-group"
    >
      <div
        className="pf-c-search-input"
      >
        <span
          className="pf-c-search-input__text"
        >
          <span
            className="pf-c-search-input__icon"
          >
            <svg
              aria-hidden={true}
              aria-labelledby={null}
              fill="currentColor"
              height="1em"
              role="img"
              style={
                Object {
                  "verticalAlign": "-0.125em",
                }
              }
              viewBox="0 0 512 512"
              width="1em"
            >
              <path
                d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
              />
            </svg>
          </span>
          <input
            aria-label="Search input"
            className="pf-c-search-input__text-input"
            onChange={[Function]}
            placeholder="Find"
            value=""
          />
        </span>
        
      </div>
      <div
        className="pattern-fly-table"
      >
        <table
          aria-label="Sortable Table"
          className="pf-c-table pf-m-grid-md"
          data-ouia-component-id="OUIA-Generated-Table-2"
          data-ouia-component-type="PF4/Table"
          data-ouia-safe={true}
          role="grid"
        >
          <thead
            className="pattern-fly-table-header"
          >
            <tr>
              <th
                className="pf-m-wrap"
                data-key={0}
                data-label="Status"
                onMouseEnter={[Function]}
                scope="col"
              >
                Status
              </th>
              <th
                className="pf-m-width-70 pf-m-wrap"
                data-key={1}
                data-label="Message"
                onMouseEnter={[Function]}
                scope="col"
              >
                Message
              </th>
              <th
                className="pf-m-wrap"
                data-key={2}
                data-label="Last Report"
                onMouseEnter={[Function]}
                scope="col"
              >
                Last Report
              </th>
            </tr>
          </thead>
          <tbody
            className="pattern-fly-table-body"
          >
            <tr
              className=""
              data-ouia-component-id="OUIA-Generated-TableRow-4"
              data-ouia-component-type="PF4/TableRow"
              data-ouia-safe={true}
              hidden={false}
              onMouseDown={[Function]}
            >
              <td
                className="pf-m-break-word"
                data-key={0}
                data-label="Status"
                onMouseEnter={[Function]}
              >
                <div>
                  <svg
                    aria-hidden={true}
                    aria-labelledby={null}
                    fill="#c9190b"
                    height="1em"
                    role="img"
                    style={
                      Object {
                        "verticalAlign": "-0.125em",
                      }
                    }
                    viewBox="0 0 512 512"
                    width="1em"
                  >
                    <path
                      d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
                    />
                  </svg>
                   
                  Not compliant
                </div>
              </td>
              <td
                className="pf-m-break-word"
                data-key={1}
                data-label="Message"
                onMouseEnter={[Function]}
              >
                NonCompliant; violation - imagemanifestvulns exist: [sha256.483a3d0c52132c7b541af90a73df657388621f57ca3db3c40d28dc8174f5420f, sha256.6d2162915f9513d3f2222ffce9beff3d694093976a368875ead963c6436c0074, sha256.f35ca58473522e3621fb407d0e27df6b5ad12f829126e22cbf15e57447ef9f2f] in namespace open-cluster-management-agent; [sha256.6bdda142dd59a0dba873253572053c54844652258b63881eeb669f31488dcaca, sha256.73393a8c99c6674dce8371e55c6973d9d8ced8b8013310d1700b2cee14912fc9, sha256.82491e047a124a86e9185d84f056027a311b2ec9af7ee694aaed2fae380b81fd, sha256.8a1070897671f62c095a6f8c065da120b1d7a119b54989b82ae9fb9f35733d8f, sha256.8e994ac2ee4bbd2fc21a67c5e4884f1040d726e0193fc3e8acd3c4b9da4d921c, sha256.9316d67e3f15c3f55f4416140a679c69fb80a771f766b68d3c336c608fc643c4, sha256.c91d425d733e4331ae610b7d2d7e1e0420b5f5f6157c3a349423c520b4f97d53, sha256.dc8ead281dd2d6ca43fa616f019c464f2835aec1fa7432ae47a9a4603f3ea7a5] in namespace open-cluster-management-agent-addon; [sha256.7613d8f7db639147b91b16b54b24cfa351c3cbde6aa7b7bf1b9c80c260efad06] in namespace openshift-cluster-version
              </td>
              <td
                className=""
                data-key={2}
                data-label="Last Report"
                onMouseEnter={[Function]}
              >
                2 days ago
              </td>
            </tr>
            <tr
              className=""
              data-ouia-component-id="OUIA-Generated-TableRow-5"
              data-ouia-component-type="PF4/TableRow"
              data-ouia-safe={true}
              hidden={false}
              onMouseDown={[Function]}
            >
              <td
                className="pf-m-break-word"
                data-key={0}
                data-label="Status"
                onMouseEnter={[Function]}
              >
                <div>
                  <svg
                    aria-hidden={true}
                    aria-labelledby={null}
                    fill="#c9190b"
                    height="1em"
                    role="img"
                    style={
                      Object {
                        "verticalAlign": "-0.125em",
                      }
                    }
                    viewBox="0 0 512 512"
                    width="1em"
                  >
                    <path
                      d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
                    />
                  </svg>
                   
                  Not compliant
                </div>
              </td>
              <td
                className="pf-m-break-word"
                data-key={1}
                data-label="Message"
                onMouseEnter={[Function]}
              >
                NonCompliant; violation - imagemanifestvulns exist: [sha256.483a3d0c52132c7b541af90a73df657388621f57ca3db3c40d28dc8174f5420f, sha256.6d2162915f9513d3f2222ffce9beff3d694093976a368875ead963c6436c0074, sha256.f35ca58473522e3621fb407d0e27df6b5ad12f829126e22cbf15e57447ef9f2f] in namespace open-cluster-management-agent; [sha256.6bdda142dd59a0dba873253572053c54844652258b63881eeb669f31488dcaca, sha256.73393a8c99c6674dce8371e55c6973d9d8ced8b8013310d1700b2cee14912fc9, sha256.82491e047a124a86e9185d84f056027a311b2ec9af7ee694aaed2fae380b81fd, sha256.8a1070897671f62c095a6f8c065da120b1d7a119b54989b82ae9fb9f35733d8f, sha256.8e994ac2ee4bbd2fc21a67c5e4884f1040d726e0193fc3e8acd3c4b9da4d921c, sha256.9316d67e3f15c3f55f4416140a679c69fb80a771f766b68d3c336c608fc643c4, sha256.c91d425d733e4331ae610b7d2d7e1e0420b5f5f6157c3a349423c520b4f97d53, sha256.dc8ead281dd2d6ca43fa616f019c464f2835aec1fa7432ae47a9a4603f3ea7a5] in namespace open-cluster-management-agent-addon; [sha256.7613d8f7db639147b91b16b54b24cfa351c3cbde6aa7b7bf1b9c80c260efad06] in namespace openshift-cluster-version
              </td>
              <td
                className=""
                data-key={2}
                data-label="Last Report"
                onMouseEnter={[Function]}
              >
                2 days ago
              </td>
            </tr>
            <tr
              className=""
              data-ouia-component-id="OUIA-Generated-TableRow-6"
              data-ouia-component-type="PF4/TableRow"
              data-ouia-safe={true}
              hidden={false}
              onMouseDown={[Function]}
            >
              <td
                className="pf-m-break-word"
                data-key={0}
                data-label="Status"
                onMouseEnter={[Function]}
              >
                <div>
                  <svg
                    aria-hidden={true}
                    aria-labelledby={null}
                    fill="#c9190b"
                    height="1em"
                    role="img"
                    style={
                      Object {
                        "verticalAlign": "-0.125em",
                      }
                    }
                    viewBox="0 0 512 512"
                    width="1em"
                  >
                    <path
                      d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
                    />
                  </svg>
                   
                  Not compliant
                </div>
              </td>
              <td
                className="pf-m-break-word"
                data-key={1}
                data-label="Message"
                onMouseEnter={[Function]}
              >
                NonCompliant; violation - imagemanifestvulns exist: [sha256.483a3d0c52132c7b541af90a73df657388621f57ca3db3c40d28dc8174f5420f, sha256.6d2162915f9513d3f2222ffce9beff3d694093976a368875ead963c6436c0074, sha256.f35ca58473522e3621fb407d0e27df6b5ad12f829126e22cbf15e57447ef9f2f] in namespace open-cluster-management-agent; [sha256.6bdda142dd59a0dba873253572053c54844652258b63881eeb669f31488dcaca, sha256.73393a8c99c6674dce8371e55c6973d9d8ced8b8013310d1700b2cee14912fc9, sha256.82491e047a124a86e9185d84f056027a311b2ec9af7ee694aaed2fae380b81fd, sha256.8a1070897671f62c095a6f8c065da120b1d7a119b54989b82ae9fb9f35733d8f, sha256.8e994ac2ee4bbd2fc21a67c5e4884f1040d726e0193fc3e8acd3c4b9da4d921c, sha256.9316d67e3f15c3f55f4416140a679c69fb80a771f766b68d3c336c608fc643c4, sha256.c91d425d733e4331ae610b7d2d7e1e0420b5f5f6157c3a349423c520b4f97d53, sha256.dc8ead281dd2d6ca43fa616f019c464f2835aec1fa7432ae47a9a4603f3ea7a5] in namespace open-cluster-management-agent-addon; [sha256.7613d8f7db639147b91b16b54b24cfa351c3cbde6aa7b7bf1b9c80c260efad06] in namespace openshift-cluster-version
              </td>
              <td
                className=""
                data-key={2}
                data-label="Last Report"
                onMouseEnter={[Function]}
              >
                2 days ago
              </td>
            </tr>
            <tr
              className=""
              data-ouia-component-id="OUIA-Generated-TableRow-7"
              data-ouia-component-type="PF4/TableRow"
              data-ouia-safe={true}
              hidden={false}
              onMouseDown={[Function]}
            >
              <td
                className="pf-m-break-word"
                data-key={0}
                data-label="Status"
                onMouseEnter={[Function]}
              >
                <div>
                  <svg
                    aria-hidden={true}
                    aria-labelledby={null}
                    fill="#c9190b"
                    height="1em"
                    role="img"
                    style={
                      Object {
                        "verticalAlign": "-0.125em",
                      }
                    }
                    viewBox="0 0 512 512"
                    width="1em"
                  >
                    <path
                      d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
                    />
                  </svg>
                   
                  Not compliant
                </div>
              </td>
              <td
                className="pf-m-break-word"
                data-key={1}
                data-label="Message"
                onMouseEnter={[Function]}
              >
                NonCompliant; violation - imagemanifestvulns exist: [sha256.483a3d0c52132c7b541af90a73df657388621f57ca3db3c40d28dc8174f5420f, sha256.6d2162915f9513d3f2222ffce9beff3d694093976a368875ead963c6436c0074, sha256.f35ca58473522e3621fb407d0e27df6b5ad12f829126e22cbf15e57447ef9f2f] in namespace open-cluster-management-agent; [sha256.6bdda142dd59a0dba873253572053c54844652258b63881eeb669f31488dcaca, sha256.73393a8c99c6674dce8371e55c6973d9d8ced8b8013310d1700b2cee14912fc9, sha256.82491e047a124a86e9185d84f056027a311b2ec9af7ee694aaed2fae380b81fd, sha256.8a1070897671f62c095a6f8c065da120b1d7a119b54989b82ae9fb9f35733d8f, sha256.8e994ac2ee4bbd2fc21a67c5e4884f1040d726e0193fc3e8acd3c4b9da4d921c, sha256.9316d67e3f15c3f55f4416140a679c69fb80a771f766b68d3c336c608fc643c4, sha256.c91d425d733e4331ae610b7d2d7e1e0420b5f5f6157c3a349423c520b4f97d53, sha256.dc8ead281dd2d6ca43fa616f019c464f2835aec1fa7432ae47a9a4603f3ea7a5] in namespace open-cluster-management-agent-addon; [sha256.7613d8f7db639147b91b16b54b24cfa351c3cbde6aa7b7bf1b9c80c260efad06] in namespace openshift-cluster-version
              </td>
              <td
                className=""
                data-key={2}
                data-label="Last Report"
                onMouseEnter={[Function]}
              >
                3 days ago
              </td>
            </tr>
            <tr
              className=""
              data-ouia-component-id="OUIA-Generated-TableRow-8"
              data-ouia-component-type="PF4/TableRow"
              data-ouia-safe={true}
              hidden={false}
              onMouseDown={[Function]}
            >
              <td
                className="pf-m-break-word"
                data-key={0}
                data-label="Status"
                onMouseEnter={[Function]}
              >
                <div>
                  <svg
                    aria-hidden={true}
                    aria-labelledby={null}
                    fill="#c9190b"
                    height="1em"
                    role="img"
                    style={
                      Object {
                        "verticalAlign": "-0.125em",
                      }
                    }
                    viewBox="0 0 512 512"
                    width="1em"
                  >
                    <path
                      d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
                    />
                  </svg>
                   
                  Not compliant
                </div>
              </td>
              <td
                className="pf-m-break-word"
                data-key={1}
                data-label="Message"
                onMouseEnter={[Function]}
              >
                NonCompliant; violation - imagemanifestvulns exist: [sha256.483a3d0c52132c7b541af90a73df657388621f57ca3db3c40d28dc8174f5420f, sha256.6d2162915f9513d3f2222ffce9beff3d694093976a368875ead963c6436c0074, sha256.f35ca58473522e3621fb407d0e27df6b5ad12f829126e22cbf15e57447ef9f2f] in namespace open-cluster-management-agent; [sha256.6bdda142dd59a0dba873253572053c54844652258b63881eeb669f31488dcaca, sha256.73393a8c99c6674dce8371e55c6973d9d8ced8b8013310d1700b2cee14912fc9, sha256.82491e047a124a86e9185d84f056027a311b2ec9af7ee694aaed2fae380b81fd, sha256.8a1070897671f62c095a6f8c065da120b1d7a119b54989b82ae9fb9f35733d8f, sha256.8e994ac2ee4bbd2fc21a67c5e4884f1040d726e0193fc3e8acd3c4b9da4d921c, sha256.9316d67e3f15c3f55f4416140a679c69fb80a771f766b68d3c336c608fc643c4, sha256.c91d425d733e4331ae610b7d2d7e1e0420b5f5f6157c3a349423c520b4f97d53, sha256.dc8ead281dd2d6ca43fa616f019c464f2835aec1fa7432ae47a9a4603f3ea7a5] in namespace open-cluster-management-agent-addon; [sha256.7613d8f7db639147b91b16b54b24cfa351c3cbde6aa7b7bf1b9c80c260efad06] in namespace openshift-cluster-version
              </td>
              <td
                className=""
                data-key={2}
                data-label="Last Report"
                onMouseEnter={[Function]}
              >
                3 days ago
              </td>
            </tr>
            <tr
              className=""
              data-ouia-component-id="OUIA-Generated-TableRow-9"
              data-ouia-component-type="PF4/TableRow"
              data-ouia-safe={true}
              hidden={false}
              onMouseDown={[Function]}
            >
              <td
                className="pf-m-break-word"
                data-key={0}
                data-label="Status"
                onMouseEnter={[Function]}
              >
                <div>
                  <svg
                    aria-hidden={true}
                    aria-labelledby={null}
                    fill="#c9190b"
                    height="1em"
                    role="img"
                    style={
                      Object {
                        "verticalAlign": "-0.125em",
                      }
                    }
                    viewBox="0 0 512 512"
                    width="1em"
                  >
                    <path
                      d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
                    />
                  </svg>
                   
                  Not compliant
                </div>
              </td>
              <td
                className="pf-m-break-word"
                data-key={1}
                data-label="Message"
                onMouseEnter={[Function]}
              >
                NonCompliant; violation - imagemanifestvulns exist: [sha256.483a3d0c52132c7b541af90a73df657388621f57ca3db3c40d28dc8174f5420f, sha256.6d2162915f9513d3f2222ffce9beff3d694093976a368875ead963c6436c0074, sha256.f35ca58473522e3621fb407d0e27df6b5ad12f829126e22cbf15e57447ef9f2f] in namespace open-cluster-management-agent; [sha256.6bdda142dd59a0dba873253572053c54844652258b63881eeb669f31488dcaca, sha256.73393a8c99c6674dce8371e55c6973d9d8ced8b8013310d1700b2cee14912fc9, sha256.82491e047a124a86e9185d84f056027a311b2ec9af7ee694aaed2fae380b81fd, sha256.8a1070897671f62c095a6f8c065da120b1d7a119b54989b82ae9fb9f35733d8f, sha256.8e994ac2ee4bbd2fc21a67c5e4884f1040d726e0193fc3e8acd3c4b9da4d921c, sha256.9316d67e3f15c3f55f4416140a679c69fb80a771f766b68d3c336c608fc643c4, sha256.c91d425d733e4331ae610b7d2d7e1e0420b5f5f6157c3a349423c520b4f97d53, sha256.dc8ead281dd2d6ca43fa616f019c464f2835aec1fa7432ae47a9a4603f3ea7a5] in namespace open-cluster-management-agent-addon; [sha256.7613d8f7db639147b91b16b54b24cfa351c3cbde6aa7b7bf1b9c80c260efad06] in namespace openshift-cluster-version
              </td>
              <td
                className=""
                data-key={2}
                data-label="Last Report"
                onMouseEnter={[Function]}
              >
                3 days ago
              </td>
            </tr>
            <tr
              className=""
              data-ouia-component-id="OUIA-Generated-TableRow-10"
              data-ouia-component-type="PF4/TableRow"
              data-ouia-safe={true}
              hidden={false}
              onMouseDown={[Function]}
            >
              <td
                className="pf-m-break-word"
                data-key={0}
                data-label="Status"
                onMouseEnter={[Function]}
              >
                <div>
                  <svg
                    aria-hidden={true}
                    aria-labelledby={null}
                    fill="#c9190b"
                    height="1em"
                    role="img"
                    style={
                      Object {
                        "verticalAlign": "-0.125em",
                      }
                    }
                    viewBox="0 0 512 512"
                    width="1em"
                  >
                    <path
                      d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
                    />
                  </svg>
                   
                  Not compliant
                </div>
              </td>
              <td
                className="pf-m-break-word"
                data-key={1}
                data-label="Message"
                onMouseEnter={[Function]}
              >
                NonCompliant; violation - imagemanifestvulns exist: [sha256.483a3d0c52132c7b541af90a73df657388621f57ca3db3c40d28dc8174f5420f, sha256.6d2162915f9513d3f2222ffce9beff3d694093976a368875ead963c6436c0074, sha256.f35ca58473522e3621fb407d0e27df6b5ad12f829126e22cbf15e57447ef9f2f] in namespace open-cluster-management-agent; [sha256.6bdda142dd59a0dba873253572053c54844652258b63881eeb669f31488dcaca, sha256.73393a8c99c6674dce8371e55c6973d9d8ced8b8013310d1700b2cee14912fc9, sha256.82491e047a124a86e9185d84f056027a311b2ec9af7ee694aaed2fae380b81fd, sha256.8a1070897671f62c095a6f8c065da120b1d7a119b54989b82ae9fb9f35733d8f, sha256.8e994ac2ee4bbd2fc21a67c5e4884f1040d726e0193fc3e8acd3c4b9da4d921c, sha256.9316d67e3f15c3f55f4416140a679c69fb80a771f766b68d3c336c608fc643c4, sha256.c91d425d733e4331ae610b7d2d7e1e0420b5f5f6157c3a349423c520b4f97d53, sha256.dc8ead281dd2d6ca43fa616f019c464f2835aec1fa7432ae47a9a4603f3ea7a5] in namespace open-cluster-management-agent-addon; [sha256.7613d8f7db639147b91b16b54b24cfa351c3cbde6aa7b7bf1b9c80c260efad06] in namespace openshift-cluster-version
              </td>
              <td
                className=""
                data-key={2}
                data-label="Last Report"
                onMouseEnter={[Function]}
              >
                4 days ago
              </td>
            </tr>
            <tr
              className=""
              data-ouia-component-id="OUIA-Generated-TableRow-11"
              data-ouia-component-type="PF4/TableRow"
              data-ouia-safe={true}
              hidden={false}
              onMouseDown={[Function]}
            >
              <td
                className="pf-m-break-word"
                data-key={0}
                data-label="Status"
                onMouseEnter={[Function]}
              >
                <div>
                  <svg
                    aria-hidden={true}
                    aria-labelledby={null}
                    fill="#c9190b"
                    height="1em"
                    role="img"
                    style={
                      Object {
                        "verticalAlign": "-0.125em",
                      }
                    }
                    viewBox="0 0 512 512"
                    width="1em"
                  >
                    <path
                      d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
                    />
                  </svg>
                   
                  Not compliant
                </div>
              </td>
              <td
                className="pf-m-break-word"
                data-key={1}
                data-label="Message"
                onMouseEnter={[Function]}
              >
                NonCompliant; violation - imagemanifestvulns exist: [sha256.483a3d0c52132c7b541af90a73df657388621f57ca3db3c40d28dc8174f5420f, sha256.6d2162915f9513d3f2222ffce9beff3d694093976a368875ead963c6436c0074, sha256.f35ca58473522e3621fb407d0e27df6b5ad12f829126e22cbf15e57447ef9f2f] in namespace open-cluster-management-agent; [sha256.6bdda142dd59a0dba873253572053c54844652258b63881eeb669f31488dcaca, sha256.73393a8c99c6674dce8371e55c6973d9d8ced8b8013310d1700b2cee14912fc9, sha256.82491e047a124a86e9185d84f056027a311b2ec9af7ee694aaed2fae380b81fd, sha256.8a1070897671f62c095a6f8c065da120b1d7a119b54989b82ae9fb9f35733d8f, sha256.8e994ac2ee4bbd2fc21a67c5e4884f1040d726e0193fc3e8acd3c4b9da4d921c, sha256.9316d67e3f15c3f55f4416140a679c69fb80a771f766b68d3c336c608fc643c4, sha256.c91d425d733e4331ae610b7d2d7e1e0420b5f5f6157c3a349423c520b4f97d53, sha256.dc8ead281dd2d6ca43fa616f019c464f2835aec1fa7432ae47a9a4603f3ea7a5] in namespace open-cluster-management-agent-addon; [sha256.7613d8f7db639147b91b16b54b24cfa351c3cbde6aa7b7bf1b9c80c260efad06] in namespace openshift-cluster-version
              </td>
              <td
                className=""
                data-key={2}
                data-label="Last Report"
                onMouseEnter={[Function]}
              >
                4 days ago
              </td>
            </tr>
            <tr
              className=""
              data-ouia-component-id="OUIA-Generated-TableRow-12"
              data-ouia-component-type="PF4/TableRow"
              data-ouia-safe={true}
              hidden={false}
              onMouseDown={[Function]}
            >
              <td
                className="pf-m-break-word"
                data-key={0}
                data-label="Status"
                onMouseEnter={[Function]}
              >
                <div>
                  <svg
                    aria-hidden={true}
                    aria-labelledby={null}
                    fill="#c9190b"
                    height="1em"
                    role="img"
                    style={
                      Object {
                        "verticalAlign": "-0.125em",
                      }
                    }
                    viewBox="0 0 512 512"
                    width="1em"
                  >
                    <path
                      d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
                    />
                  </svg>
                   
                  Not compliant
                </div>
              </td>
              <td
                className="pf-m-break-word"
                data-key={1}
                data-label="Message"
                onMouseEnter={[Function]}
              >
                NonCompliant; violation - imagemanifestvulns exist: [sha256.483a3d0c52132c7b541af90a73df657388621f57ca3db3c40d28dc8174f5420f, sha256.6d2162915f9513d3f2222ffce9beff3d694093976a368875ead963c6436c0074, sha256.f35ca58473522e3621fb407d0e27df6b5ad12f829126e22cbf15e57447ef9f2f] in namespace open-cluster-management-agent; [sha256.6bdda142dd59a0dba873253572053c54844652258b63881eeb669f31488dcaca, sha256.73393a8c99c6674dce8371e55c6973d9d8ced8b8013310d1700b2cee14912fc9, sha256.82491e047a124a86e9185d84f056027a311b2ec9af7ee694aaed2fae380b81fd, sha256.8a1070897671f62c095a6f8c065da120b1d7a119b54989b82ae9fb9f35733d8f, sha256.8e994ac2ee4bbd2fc21a67c5e4884f1040d726e0193fc3e8acd3c4b9da4d921c, sha256.9316d67e3f15c3f55f4416140a679c69fb80a771f766b68d3c336c608fc643c4, sha256.c91d425d733e4331ae610b7d2d7e1e0420b5f5f6157c3a349423c520b4f97d53, sha256.dc8ead281dd2d6ca43fa616f019c464f2835aec1fa7432ae47a9a4603f3ea7a5] in namespace open-cluster-management-agent-addon; [sha256.7613d8f7db639147b91b16b54b24cfa351c3cbde6aa7b7bf1b9c80c260efad06] in namespace openshift-cluster-version
              </td>
              <td
                className=""
                data-key={2}
                data-label="Last Report"
                onMouseEnter={[Function]}
              >
                4 days ago
              </td>
            </tr>
            <tr
              className=""
              data-ouia-component-id="OUIA-Generated-TableRow-13"
              data-ouia-component-type="PF4/TableRow"
              data-ouia-safe={true}
              hidden={false}
              onMouseDown={[Function]}
            >
              <td
                className="pf-m-break-word"
                data-key={0}
                data-label="Status"
                onMouseEnter={[Function]}
              >
                <div>
                  <svg
                    aria-hidden={true}
                    aria-labelledby={null}
                    fill="#c9190b"
                    height="1em"
                    role="img"
                    style={
                      Object {
                        "verticalAlign": "-0.125em",
                      }
                    }
                    viewBox="0 0 512 512"
                    width="1em"
                  >
                    <path
                      d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
                    />
                  </svg>
                   
                  Not compliant
                </div>
              </td>
              <td
                className="pf-m-break-word"
                data-key={1}
                data-label="Message"
                onMouseEnter={[Function]}
              >
                NonCompliant; violation - imagemanifestvulns exist: [sha256.483a3d0c52132c7b541af90a73df657388621f57ca3db3c40d28dc8174f5420f, sha256.6d2162915f9513d3f2222ffce9beff3d694093976a368875ead963c6436c0074, sha256.f35ca58473522e3621fb407d0e27df6b5ad12f829126e22cbf15e57447ef9f2f] in namespace open-cluster-management-agent; [sha256.6bdda142dd59a0dba873253572053c54844652258b63881eeb669f31488dcaca, sha256.73393a8c99c6674dce8371e55c6973d9d8ced8b8013310d1700b2cee14912fc9, sha256.82491e047a124a86e9185d84f056027a311b2ec9af7ee694aaed2fae380b81fd, sha256.8a1070897671f62c095a6f8c065da120b1d7a119b54989b82ae9fb9f35733d8f, sha256.8e994ac2ee4bbd2fc21a67c5e4884f1040d726e0193fc3e8acd3c4b9da4d921c, sha256.9316d67e3f15c3f55f4416140a679c69fb80a771f766b68d3c336c608fc643c4, sha256.c91d425d733e4331ae610b7d2d7e1e0420b5f5f6157c3a349423c520b4f97d53, sha256.dc8ead281dd2d6ca43fa616f019c464f2835aec1fa7432ae47a9a4603f3ea7a5] in namespace open-cluster-management-agent-addon; [sha256.7613d8f7db639147b91b16b54b24cfa351c3cbde6aa7b7bf1b9c80c260efad06] in namespace openshift-cluster-version
              </td>
              <td
                className=""
                data-key={2}
                data-label="Last Report"
                onMouseEnter={[Function]}
              >
                5 days ago
              </td>
            </tr>
          </tbody>
        </table>
        <div
          className="pf-c-pagination pf-m-bottom"
          data-ouia-component-id="OUIA-Generated-Pagination-bottom-2"
          data-ouia-component-type="PF4/Pagination"
          data-ouia-safe={true}
          id="pagination-options-menu-bottom-1"
        >
          <div
            className="pf-c-options-menu pf-m-top"
            data-ouia-component-type="PF4/PaginationOptionsMenu"
            data-ouia-safe={true}
          >
            <div
              className="pf-c-options-menu__toggle pf-m-plain pf-m-text"
            >
              <span
                className="pf-c-options-menu__toggle-text"
              >
                <b>
                  1
                   - 
                  10
                </b>
                 
                of 
                <b>
                  18
                </b>
                 
                
              </span>
              <button
                aria-expanded={false}
                aria-label="Items per page"
                className="  pf-c-options-menu__toggle-button"
                disabled={false}
                id="pagination-options-menu-bottom-toggle-1"
                onClick={[Function]}
                onKeyDown={[Function]}
                type="button"
              >
                <span
                  className="pf-c-options-menu__toggle-button-icon"
                >
                  <svg
                    aria-hidden={true}
                    aria-labelledby={null}
                    fill="currentColor"
                    height="1em"
                    role="img"
                    style={
                      Object {
                        "verticalAlign": "-0.125em",
                      }
                    }
                    viewBox="0 0 320 512"
                    width="1em"
                  >
                    <path
                      d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                    />
                  </svg>
                </span>
              </button>
            </div>
          </div>
          <nav
            aria-label="Pagination"
            className="pf-c-pagination__nav"
          >
            <div
              className="pf-c-pagination__nav-control pf-m-first"
            >
              <button
                aria-disabled={true}
                aria-label="Go to first page"
                className="pf-c-button pf-m-plain pf-m-disabled"
                data-action="first"
                data-ouia-component-id="OUIA-Generated-Button-plain-5"
                data-ouia-component-type="PF4/Button"
                data-ouia-safe={true}
                disabled={true}
                onClick={[Function]}
                tabIndex={null}
                type="button"
              >
                <svg
                  aria-hidden={true}
                  aria-labelledby={null}
                  fill="currentColor"
                  height="1em"
                  role="img"
                  style={
                    Object {
                      "verticalAlign": "-0.125em",
                    }
                  }
                  viewBox="0 0 448 512"
                  width="1em"
                >
                  <path
                    d="M223.7 239l136-136c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9L319.9 256l96.4 96.4c9.4 9.4 9.4 24.6 0 33.9L393.7 409c-9.4 9.4-24.6 9.4-33.9 0l-136-136c-9.5-9.4-9.5-24.6-.1-34zm-192 34l136 136c9.4 9.4 24.6 9.4 33.9 0l22.6-22.6c9.4-9.4 9.4-24.6 0-33.9L127.9 256l96.4-96.4c9.4-9.4 9.4-24.6 0-33.9L201.7 103c-9.4-9.4-24.6-9.4-33.9 0l-136 136c-9.5 9.4-9.5 24.6-.1 34z"
                  />
                </svg>
              </button>
            </div>
            <div
              className="pf-c-pagination__nav-control"
            >
              <button
                aria-disabled={true}
                aria-label="Go to previous page"
                className="pf-c-button pf-m-plain pf-m-disabled"
                data-action="previous"
                data-ouia-component-id="OUIA-Generated-Button-plain-6"
                data-ouia-component-type="PF4/Button"
                data-ouia-safe={true}
                disabled={true}
                onClick={[Function]}
                tabIndex={null}
                type="button"
              >
                <svg
                  aria-hidden={true}
                  aria-labelledby={null}
                  fill="currentColor"
                  height="1em"
                  role="img"
                  style={
                    Object {
                      "verticalAlign": "-0.125em",
                    }
                  }
                  viewBox="0 0 256 512"
                  width="1em"
                >
                  <path
                    d="M31.7 239l136-136c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9L127.9 256l96.4 96.4c9.4 9.4 9.4 24.6 0 33.9L201.7 409c-9.4 9.4-24.6 9.4-33.9 0l-136-136c-9.5-9.4-9.5-24.6-.1-34z"
                  />
                </svg>
              </button>
            </div>
            <div
              className="pf-c-pagination__nav-page-select"
            >
              <input
                aria-label="Current page"
                className="pf-c-form-control"
                disabled={false}
                max={2}
                min={1}
                onChange={[Function]}
                onKeyDown={[Function]}
                type="number"
                value={1}
              />
              <span
                aria-hidden="true"
              >
                of 
                2
              </span>
            </div>
            <div
              className="pf-c-pagination__nav-control"
            >
              <button
                aria-disabled={false}
                aria-label="Go to next page"
                className="pf-c-button pf-m-plain"
                data-action="next"
                data-ouia-component-id="OUIA-Generated-Button-plain-7"
                data-ouia-component-type="PF4/Button"
                data-ouia-safe={true}
                disabled={false}
                onClick={[Function]}
                type="button"
              >
                <svg
                  aria-hidden={true}
                  aria-labelledby={null}
                  fill="currentColor"
                  height="1em"
                  role="img"
                  style={
                    Object {
                      "verticalAlign": "-0.125em",
                    }
                  }
                  viewBox="0 0 256 512"
                  width="1em"
                >
                  <path
                    d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
                  />
                </svg>
              </button>
            </div>
            <div
              className="pf-c-pagination__nav-control pf-m-last"
            >
              <button
                aria-disabled={false}
                aria-label="Go to last page"
                className="pf-c-button pf-m-plain"
                data-action="last"
                data-ouia-component-id="OUIA-Generated-Button-plain-8"
                data-ouia-component-type="PF4/Button"
                data-ouia-safe={true}
                disabled={false}
                onClick={[Function]}
                type="button"
              >
                <svg
                  aria-hidden={true}
                  aria-labelledby={null}
                  fill="currentColor"
                  height="1em"
                  role="img"
                  style={
                    Object {
                      "verticalAlign": "-0.125em",
                    }
                  }
                  viewBox="0 0 448 512"
                  width="1em"
                >
                  <path
                    d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34zm192-34l-136-136c-9.4-9.4-24.6-9.4-33.9 0l-22.6 22.6c-9.4 9.4-9.4 24.6 0 33.9l96.4 96.4-96.4 96.4c-9.4 9.4-9.4 24.6 0 33.9l22.6 22.6c9.4 9.4 24.6 9.4 33.9 0l136-136c9.4-9.2 9.4-24.4 0-33.8z"
                  />
                </svg>
              </button>
            </div>
          </nav>
        </div>
      </div>
    </div>
  </div>
</div>
`;
